# language-scala

./: .gitignore  LICENSE  language-scala.cabal  shell.nix
.github/workflows/: test.yml
src/Language/: Scala.hs
src/Language/Scala/: Parser.hs
src/Language/Scala/Parser/: AST.hs  External.hs  ScalaParserT.hs  ScalaTokenParsing.hs
test/: Test.hs
test/fixtures/: AnyVal.scala.json.golden.scala  ApplicativeBuilder.scala.json  ApplicativeBuilder.scala.json.golden.scala  Apply.scala.json  Apply.scala.json.golden.scala  Either.scala.json  Either.scala.json.golden.scala  EitherT.scala.json  EitherT.scala.json.golden.scala  FingerTree.scala.json.golden.scala  Foldable.scala.json  Foldable.scala.json.golden.scala  Free.scala.json  Free.scala.json.golden.scala  Function.scala.json  Function.scala.json.golden.scala  IO.scala.json  IO.scala.json.golden.scala  ISet.scala.json  ISet.scala.json.golden.scala  Kleisli.scala.json  Kleisli.scala.json.golden.scala  Lens.scala.json.golden.scala  Map.scala.json  Map.scala.json.golden.scala  PLens.scala.json  PLens.scala.json.golden.scala  ST.scala.json  ST.scala.json.golden.scala  TreeLoc.scala.json  TreeLoc.scala.json.golden.scala  Tuple.scala.json.golden.scala  WriterT.scala.json  WriterT.scala.json.golden.scala
test/golden/: AnyVal.scala.json  AnyVal.scala.json.golden.scala  FingerTree.scala.json  FingerTree.scala.json.golden.scala  Foldable.scala.json  Foldable.scala.json.golden.scala  Free.scala.json  Free.scala.json.golden.scala  ISet.scala.json  ISet.scala.json.golden.scala  Lens.scala.json  Lens.scala.json.golden.scala  Main.hs  Map.scala.json  Map.scala.json.golden.scala  PLens.scala.json  PLens.scala.json.golden.scala  Tuple.scala.json  Tuple.scala.json.golden.scala
test/pass/: Empty.scala.expected  IdTest.scala.expected  Ops.scala.expected
test/scalameta-parsers/: Main.hs  scalameta-parsers-to-json.js
