name:                language-scala
version:             0.1.0.0
synopsis:            Parser for Scala
homepage:            https://github.com/puffnfresh/language-scala
license:             MIT
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.6 && <4.7
                     , parsers >= 0.10.3
                     , transformers
                     , unordered-containers
                     , trifecta >=1.4
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Language.Scala.Parser
                     , Language.Scala.Parser.AST
                     , Language.Scala.Parser.ScalaParserT
  other-modules:       Language.Scala.Parser.ScalaTokenParsing
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >= 4 && < 5
                     , tasty >= 0.8
                     , tasty-golden >= 2.2
                     , language-scala
  default-language:    Haskell2010
