name:                language-scala
version:             0.1.0.0
synopsis:            Pretty printer for Scala
homepage:            https://github.com/puffnfresh/language-scala
license:             MIT
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.6 && < 5
                     , text >=0.1 && <1.3
                     , transformers >=0.1.3.0 && <0.6
                     , aeson >=1.1.0.0 && <1.6
                     , prettyprinter >=0.1 && <1.8
                     , scientific >=0.1 && <0.4
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Language.Scala
  default-language:    Haskell2010

test-suite language-scala-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >= 4 && < 5
                     , tasty >= 0.8
                     , tasty-golden >= 2.2
                     , aeson
                     , bytestring
                     , text
                     , prettyprinter
                     , language-scala
  default-language:    Haskell2010
