name:                language-scala
version:             0.1.0.0
synopsis:            Pretty printer for Scala
homepage:            https://github.com/puffnfresh/language-scala
license:             MIT
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
category:            Language
build-type:          Simple
cabal-version:       >=1.10
data-files:          scalameta-parsers-to-json.js
data-dir:            vendor

library
  build-depends:       base >=4.6 && < 5
                     , mtl >=1.0 && <2.3
                     , bytestring >=0.10 && <0.11
                     , process >=1.6 && <1.7
                     , text >=0.1 && <1.3
                     , transformers >=0.1.3.0 && <0.6
                     , aeson >=1.1.0.0 && <1.6
                     , prettyprinter >=1.7 && <1.8
                     , scientific >=0.1 && <0.4
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Language.Scala
                     , Language.Scala.Parser.External
  other-modules:       Paths_language_scala
  default-language:    Haskell2010

test-suite language-scala-golden
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/golden
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5
                     , tasty >= 0.8
                     , tasty-golden >= 2.2
                     , aeson
                     , filepath
                     , text
                     , prettyprinter
                     , language-scala
  default-language:    Haskell2010

test-suite language-scala-scalameta-parsers
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/scalameta-parsers
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5
                     , tasty >= 0.8
                     , tasty-golden >= 2.2
                     , aeson
                     , filepath
                     , text
                     , process
                     , prettyprinter
                     , language-scala
                     , transformers
  default-language:    Haskell2010
